assets/styles/main.scss
/* ... */
/** Down Arrow **/

.down-arrow {
	font-size: 42px;
	width: 30px;
	position: absolute;
	bottom: 0px;
	left: 50%;
	margin-left: -15px;
	color: $grey-darker;
	text-align: center;
	text-decoration: none;

	&:hover,
	&:active,
	&:focus {
		color: $grey;
		text-decoration: none;
	}
}


/** Pagination **/

.serif,
.sans-serif {
	ul.pagination {
		@include prose-heading;
		font-weight: 400;
		font-size: 17px;
	}
}

.pagination {
	display: table;
	margin: 10px auto;

	li {
		a {
			margin-right: 7px;
			padding: 2px 0;
			width: 26px;
			text-align: center;
			border-radius: 4px;
			border: 2px solid transparent;
		}
	}
}

/** Social Links **/
.social-links {
	li {
		display: inline;
	}

	.fa {
		text-align: center;
		display: inline-block;
		border-radius: 50%;
		font-size: 16px;
		padding: 7px;
		height: 31px;
		width: 31px;
		margin-right: 6px;
		color: $white;
		background-color: $grey-dark;

		&:hover,
		&:active,
		&:focus {
			text-decoration: none;
			background-color: $accent-color;
		}
	}
}




/* ==========================================================================
   Default Page & Post Styles
   ========================================================================== */

.template-full-width {
	.navbar-fixed-top {
		border-bottom: none;
	}
}

.entry-content :first-child {
	margin-top: 0;
}

.header-background {
  margin: 0 -15px 40px;
  padding: 15px 0;

  .page-header {
		position: relative;
		height: 150px;
  	color: $white;
		text-shadow: $text-shadow-1;
	  border-bottom: 0;
		margin: 0;
		padding: 0;

	  h1 {
			display: block;
			clear: both;
		  font-size: 24px;
			margin: 0;
			position: absolute;
			bottom: 5px;
	    letter-spacing: -0.025em;

		  @media (min-width: $screen-sm-min) {
				display: inline-block;
				font-size: 36px;
				letter-spacing: inherit;
				width: calc(100% - 125px);
			}
	  }

		.post-view-all {
			float: left;
			margin-top: 0;

			@media (min-width: $screen-sm-min) {
				float: none;
				position: absolute;
				bottom: 8px;
				right: 0;
			}

			a {
				display: inline-block;
				width: auto;
				color: $white;
				border-bottom: 1px solid $white;
				border-radius: 0;
				box-shadow: $box-shadow-1;
				font-size: 14px;
				padding: 0;

				&:hover,
				&:active,
				&:focus {
					text-decoration: none;
					color: $white;
					border-bottom: 2px solid $white;
				}

				@media (min-width: $screen-sm-min) {
					font-size: 16px;
					border: 2px solid $white;
					border-radius: $border-radius;
					box-shadow: 0 0 3px rgba(0,0,0,0.25);
					padding: 3px 9px 2px;

					&:hover,
					&:active,
					&:focus {
						text-shadow: none;
						color: $grey-dark;
						background-color: $white;
					}
				}
			}

			span {
				margin-right: 3px;

			  @media (min-width: $screen-sm-min) {
					display: none;
				}
			}
		}
  }
}

/* Page Headers with Background Image */
.header-background.bg-image {
	@include background-image;
	background-color: $grey;
	position: relative;
	z-index: 1;

	&:before {
		background-color: rgba(0, 0, 0, 0.1);
		z-index: 2;
		content: ' ';
		display: block;
		position: absolute;
		left: 0;
		top: 0;
		width: 100%;
		height: 280px;
	}

	.page-header {
		height: 250px;
		z-index: 3;
	}
}


/** Archive Post **/

.blog,
.archive,
.search-results {
	article {
		border-bottom: $border-grey-lighter-2px;
		margin-bottom: 45px;
		padding-bottom: 45px;

		&:last-child {
			border-bottom: 0;
			margin-bottom: 0;
		}

		header {
			margin-bottom: 15px;
		}

		.entry-title {
			font-size: 24px;
		}

		p {
			font-size: 17px;
			margin-bottom: 0;
		}

		.entry-summary {
			margin-bottom: 0;

			p,
			ul,
			ol {
				@include prose-body;
			}
		}
	}
}


/** Entry Meta **/

.entry-meta-container {
	font-size: 14px;
	color: $grey-dark;
	margin-bottom: 10px;
	display: table;
	clear: both;

	.meta-datapoint {
		margin-right: 12px;
		float: left;
		padding: 2px 0;
		display: table;

		a {
			color: $grey-dark;
		}
	}

	i {
		margin-right: 6px;
		color: $accent-color;
	}

	.post-type {
		text-transform: capitalize;
		padding-left: 6px;
		padding-right: 6px;
		border-radius: $border-radius;
		background: #eee;
	}
}


/** Featured Image **/

/*
.featured-image {
	width: 100%;
	max-width: 480px;
	max-height: 320px;
	overflow: hidden;
	margin-bottom: 15px;
	border-radius: $border-radius;

	@media (min-width: $screen-sm-min) {
		max-width: 320px;
		max-height: 100%;
		float: left;
		margin-right: 20px;
		margin-bottom: 0;
	}

	.wp-post-image {
		width: 100%;
		max-width: 100%;
		height: auto;
	}
}

.entry-summary {
	.featured-image {
	  position: relative;
	  overflow: hidden;
	  padding-bottom: 180px;
		background-color: #c9c9c9;
		@include transition(all 0.2s);

		&:hover,
		&:active,
		&:focus {
			opacity: 0.8;
			filter: alpha(opacity=80);
			color: rgba(0,0,0,1);
			text-decoration: underline;
		}

		.wp-post-image {
			display: block;
	    position: absolute;
	    top: -9999px;
	    bottom: -9999px;
	    left: -9999px;
	    right: -9999px;
	    margin: auto;
	    min-width: 100%;
		}
	}
}

.product-thumbnail {
	@include background-image;
	background-size: contain;
	width: 100%;
	margin-bottom: 15px;
	padding: 30%;
	border-radius: 2px;
	overflow: hidden;
	text-overflow: ellipsis;
	text-align: center;
	font-weight: 600;
	color: rgba(0,0,0,0);
	@include transition(all 0.2s);

	&:hover,
	&:active,
	&:focus {
		opacity: 0.8;
		filter: alpha(opacity=80);
		color: rgba(0,0,0,1);
		text-decoration: underline;
	}

	@media (min-width: $screen-sm-min) {
		padding: 30%;
	}
}
*/

.featured-image {
	width: 100%;
	height: auto;
	overflow: hidden;
	padding-bottom: 15px;
	border-radius: $border-radius;

	@media (min-width: $screen-sm-min) {
		float: left;
		width: auto;
		margin-right: 20px;
	}

	.wp-post-image {
		width: auto;
		max-width: 100%;
		height: auto;
		max-height: 100%;

		@media (min-width: $screen-sm-min) {
			max-height: 50%;
		}
	}
}
/* ... */

